--- a/ass_juridica.html
+++ b/ass_juridica.html
@@ -33,7 +33,7 @@
                     <h4 class="text-black">Contatos</h4>
                     <h5 class="my-0 font-weight-normal"><a href="mailto:simone.eurin@wodevotzkyadvogados.com.br">Dra Simone Eurin</a></h5>
                     <h5 class="my-0 font-weight-normal"><a href="mailto:fernanda@wodevotzkyadvogados.com.br">Dra Fernanda Ap. Pereira</a></h5>
-                    <h5 class="my-0 font-weight-normal"><a href="http://wodevotzkyadvogados.com.br">Webpage</a></h5>
+                    <h5 class="my-0 font-weight-normal"><a href="http://wodevotzkyadvogados.com.br">Página da Web</a></h5>
                 </div>
             </div>
         </div>
